--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <tr>
                 <td>
                   <a href="#"
-                    ><img src="/img/logo.png" alt="Logo" width="250"
+                    ><img src="img/logo.png" alt="Logo" width="250"
                   /></a>
                 </td>
               </tr>
@@ -145,7 +145,7 @@
             <table width="100%">
               <tr>
                 <td>
-                  <img src="/img/hand-with-card2.png" alt="Hand" width="500"/>
+                  <img src="img/hand-with-card2.png" alt="Hand" width="500"/>
                 </td>
               </tr>
             </table>
@@ -178,7 +178,7 @@
                         <table class="content">
                           <tr>
                             <td>
-                              <img src="/img/icon_heart.png" alt="heart" />
+                              <img src="img/icon_heart.png" alt="heart" />
                             </td>
                           </tr>
                         </table>
@@ -225,7 +225,7 @@
                         <table class="content">
                           <tr>
                             <td>
-                              <img src="/img/icon_heart.png" alt="heart" />
+                              <img src="img/icon_heart.png" alt="heart" />
                             </td>
                           </tr>
                         </table>
@@ -272,7 +272,7 @@
                         <table class="content">
                           <tr>
                             <td>
-                              <img src="/img/icon_card.png" alt="heart" />
+                              <img src="img/icon_card.png" alt="heart" />
                             </td>
                           </tr>
                         </table>
@@ -327,7 +327,7 @@
               <tr>
                 <td>
                   <a href="#"
-                    ><img src="/img/logo.png" alt="Logo" width="250"
+                    ><img src="img/logo.png" alt="Logo" width="250"
                   /></a>
                 </td>
               </tr>
@@ -340,12 +340,12 @@
             <table width="100%">
               <tr>
                 <td>
-                  <a href="#"><img src="/img/facebook-white-medium.png" alt="facebook"></a>
-                  <a href="#"><img src="/img/twitter-white-medium.png" alt=" "></a>
-                  <a href="#"><img src="/img/instagram-white-medium.png" alt=""></a>
-                  <a href="#"><img src="/img/linkedin-white-medium.png" alt=""></a>
-                  <a href="#"><img src="/img/website-white-medium.png" alt=""></a>
-                  <a href="#"><img src="/img/pinterest-white-medium.png" alt=""></a>
+                  <a href="#"><img src="img/facebook-white-medium.png" alt="facebook"></a>
+                  <a href="#"><img src="img/twitter-white-medium.png" alt=" "></a>
+                  <a href="#"><img src="img/instagram-white-medium.png" alt=""></a>
+                  <a href="#"><img src="img/linkedin-white-medium.png" alt=""></a>
+                  <a href="#"><img src="img/website-white-medium.png" alt=""></a>
+                  <a href="#"><img src="img/pinterest-white-medium.png" alt=""></a>
                 </td>
               </tr>
             </table>
